# bods

./: .black.toml  .djlint_rules.yaml  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  dataframe.csv  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  esbuild.config.js  esbuild.config.mjs  esbuild.mjs  gulpfile.js  incomplete_dashboard_2025-06-12.csv  lambda.py  manage.py  migrator.py  package-lock.json  package.json  purge.js  pyproject.toml  requirements.txt  setup.cfg  test_lambda_local.py  test_noc_lambda_local.py  test_nptg_lambda_local.py  test_weca_lambda_local.py  test_weca_local.py  version-cavl.txt  version.txt
.github/: dependabot.yml
accessibility/: index.py  template.html
bods-nextjs/: .env.example  .gitignore  config.ts  eslint.config.mjs  jest.config.js  jest.setup.js  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
cavl-client/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
ci/: bods-base-ci.yml  bods-ci.yml  crispy-forms-govuk-ci.yml
config/: .env.local.template  .env.nodocker.template  .env.prod.template  custom_storage.py  hosts.py  wsgi.py
crispy-forms-govuk/: .gitignore  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg
crispy-forms-govuk/crispy_forms_govuk/: forms.py  settings.py
crispy-forms-govuk/crispy_forms_govuk/layout/: buttons.py  fields.py
crispy-forms-govuk/crispy_forms_govuk/templates/govuk/: errors.html  field.html  radio_accordion_group.html
crispy-forms-govuk/docs/source/: conf.py  development.rst  dummy_settings.py  index.rst  install.rst  settings.rst
crispy-forms-govuk/docs/source/layout/: buttons.rst  fields.rst
crispy-forms-govuk/sandbox/: manage.py  urls.py  wsgi.py
crispy-forms-govuk/sandbox/components/: __init__.py  forms.py  urls.py  views.py
crispy-forms-govuk/sandbox/components/templates/components/: checkbox.html  checkboxes.html  error-summary.html  fileupload.html  textarea.html  textinput.html
crispy-forms-govuk/sandbox/demo/: layout.py  models.py  urls.py
crispy-forms-govuk/sandbox/demo/migrations/: 0001_initial.py
crispy-forms-govuk/sandbox/demo/templates/demo/: base.html
crispy-forms-govuk/sandbox/demo/templates/demo/forms/: table_formset.html
crispy-forms-govuk/sandbox/demo/templates/demo/snippets/: sidebar.html
crispy-forms-govuk/sandbox/demo/templatetags/: active_url.py
crispy-forms-govuk/sandbox/examples/: forms.py  urls.py  views.py
crispy-forms-govuk/sandbox/examples/templates/examples/: formset_example.html  home.html  question_page_with_label.html  question_page_with_legend.html  signup.html
crispy-forms-govuk/sandbox/settings/: base.py  demo.py  tests.py
crispy-forms-govuk/sandbox/static/css/: demo.css  project.css
crispy-forms-govuk/sandbox/static/js/: all.min.js
crispy-forms-govuk/sandbox/templates/: banner.html  base.html  footer.html  header.html  home.html  page.html
crispy-forms-govuk/tests/: 003_buttons.py
docs/: setup.md
e2e_tests/: .env.example  .gitignore  Dockerfile  config.ts  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  readme.md  tsconfig.json
fares_validator/: serializers.py  views.py
frontend/: .eslintrc.js  .gitignore  MANIFEST.in  README.rst  karma.conf.js  package-lock.json  package.json  pyproject.toml  setup.cfg  webpack.common.js  webpack.dev.js  webpack.prod.js
frontend/frontend/assets/js/: api-docs.js  api-service.js  autocomplete.js  bods-maths.js  cookie_consent.js  copy_to_clipboard.js  data-quality-detail-map.js  dqs-review-panel.js  fares-detail-map.js  feed-detail-map.js  feed-detail-progress.js  feed-list-progress.js  http-client.js  main.js  my-account-menu.js  polyfills.js  timeout-warning.js  timout-warning.js
frontend/frontend/assets/sass/: project.scss
frontend/frontend/assets/sass/components/: _all.scss
frontend/frontend/assets/sass/components/api-doc/: _api_doc.scss
frontend/frontend/assets/sass/components/banner/: _title-banner.scss
frontend/frontend/assets/sass/components/button/: _all.scss  _button-holder.scss  _button.scss
frontend/frontend/assets/sass/components/guidance/: _guidance.scss
frontend/frontend/assets/sass/components/radios/: _radios.scss
frontend/frontend/assets/sass/components/range_filter/: _range_filter.scss
frontend/frontend/assets/sass/components/search/: _search.scss
frontend/frontend/assets/sass/components/select/: _org_select.scss
frontend/frontend/assets/sass/components/table/: _all.scss  _browse_results_table.scss  _dataset_property_table.scss
frontend/frontend/assets/sass/components/timeout_warning/: _timeout-warning.scss
frontend/frontend/assets/sass/objects/: _grid.scss
frontend/frontend/assets/sass/overrides/: _font-weight.scss  _spacing.scss
frontend/frontend/assets/sass/patterns/: _step-by-step-nav.scss
frontend/gulpfile.js/: index.js
frontend/gulpfile.js/tasks/: bundle.js  clean.js  fonts.js  imgCompression.js  styles.js  watch.js
frontend/spec/frontend/: cookie_consent.spec.js  copy_to_clipboard.spec.js
frontend/spec/jasmine_examples/: PlayerSpec.js
report/: localhost:8001_.json  publish.bods.localhost:8001_.json  publish.bods.localhost:8001_account_.json  publish.bods.localhost:8001_account_login_?next=_.json  publish.bods.localhost:8001_account_login_?next=_account_manage_invite_.json  publish.bods.localhost:8001_account_manage_invite_.json  publish.bods.localhost:8001_account_manage_org-profile_17_.json  publish.bods.localhost:8001_account_manage_org-profile_27_.json  publish.bods.localhost:8001_account_manage_org-profile_43_.json  publish.bods.localhost:8001_account_manage_org-profile_44_.json  publish.bods.localhost:8001_account_settings_.json  publish.bods.localhost:8001_guidance_.json  publish.bods.localhost:8001_guidance_data-quality-definitions_.json  publish.bods.localhost:8001_guidance_local-authority-requirements_.json  publish.bods.localhost:8001_guidance_local-authority-requirements_?section=agent.json  (+44 more)
(+2838 files in other folders)
