[tool.poetry]
name = "bods"
version = "1.22.0"
description = "Bus Open Data Service"
authors = [
        "Angus Bell <angus.bell@itoworld.com>",
        "Andrea Garau <andrea.garau@itoworld.com>",
        "Paul Holland <paul.holland@itoworld.com>",
        "Ciaran McCormick <ciaran.mccormick@itoworld.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

argh = "~=0.26.0"
argon2-cffi = "~=20.1.0"
attrs = "~=20.3.0"
celery = "~=5.2.0"
clamd = "~=1.0.0"
# crispy-forms-govuk = "^0.2.0"
decorator = "~=4.0.0"
defusedxml = "~=0.6.0"
django = "~=4.2.7"
django-allauth = "~=0.58.2"
django-anymail = {extras = ["mailgun"], version = "~=10.2"}
django-celery-beat = "~=2.5.0"
django-celery-results = "~=2.5.1"
django-classy-tags = "~=4.1.0"
django-cors-headers = "~=4.3.0"
django-environ = "~=0.11.2"
django-extensions = "~=3.2.3"
django-filter = "~=23.3"
django-formtools = "~=2.4.1"
django-fsm = "~=2.8.1"
django-hosts = "~=6.0"
django-invitations = "~=2.0.0"
django-model-utils = "~=4.3.1"
django-redis = "~=5.4.0"
django-rest-swagger = "~=2.2.0"
django-storages = {extras = ["boto3"], version = "~=1.14.2"}
django-tables2 = "~=2.6.0"
djangorestframework = "~=3.14.0"
djangorestframework-gis = "~=1.0"
ddtrace = "~=2.1.5"
flower = "~=2.0.1"
freezegun = "~=1.2.2"
geopandas = "~=0.7.0"
gunicorn = "~=21.0.0"
ipython = "~=8.17.2"
isoduration = "~=20.11.0"
lxml = "^4.9.3"
notifications-python-client = "~=8.1.0"
pandas = "~=1.5.3"
Pillow = "^10.1.0"
psycopg2-binary = "~=2.9.9"
pydantic = "~=1.8.0"
pyproj = "~=3.6.1"
pytz = "~=2023.3.post1"
redis = "~=3.5.0"
shapely = "~=1.7.0"
stories = "~=1.0.0"
tenacity = "~=6.2.0"
whitenoise = "~=5.1.0"
openpyxl = "^3.0.10"
django-waffle = "^3.0.0"
django-crispy-forms = "^2.1"
crispy-forms-govuk = {url = "https://github.com/brahmaduttau/django-crispy-forms-govuk/archive/refs/heads/main.zip"}

[tool.poetry.dev-dependencies]
black = "==22.3.0"
coverage = "~=5.1.0"
ddt = "~=1.4.0"
django-debug-toolbar = "~=4.2.0"
django-querycount = "^0.7.0"
djhtml = "^1.4.11"
factory-boy = "~=2.12.0"
flake8 = "~=3.8.0"
ipdb = "~=0.13.0"
isort = "~=5.10.0"
mocket = "~=3.9.0"
nose = "~=1.3.0"
pre-commit = "~=2.9.0"
pytest = "~=6.2.0"
pytest-cov = "~=2.10.0"
pytest-deadfixtures = "^2.2.1"
pytest-django = "~=3.9.0"
pytest-factoryboy = "~=2.1.0"
pytest-mock = "~=3.1.0"
pytest-sugar = "~=0.9.0"
pytest-xdist = "~=1.32.0"
pyyaml = "~=6.0.1"
requests-mock = "~=1.9.3"
safety = "~=1.10.3"
watchdog = "~=0.10.0"
werkzeug = "~=2.0.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
