[tool.poetry]
name = "bods"
version = "1.22.0"
description = "Bus Open Data Service"
authors = [
        "Angus Bell <angus.bell@itoworld.com>",
        "Andrea Garau <andrea.garau@itoworld.com>",
        "Paul Holland <paul.holland@itoworld.com>",
        "Ciaran McCormick <ciaran.mccormick@itoworld.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

argon2-cffi = "~=23.1.0"
celery = "~=5.3.6"
clamd = "~=1.0.2"
ddtrace = "~=2.6.5"
decorator = "~=5.1.1"
defusedxml = "~=0.7.1"
django = "~=4.2.9"
django-allauth = "~=0.59.0"
django-anymail = { extras = ["mailgun"], version = "~=10.2" }
django-celery-beat = "~=2.5.0"
django-celery-results = "~=2.5.1"
django-classy-tags = "~=4.1.0"
django-cors-headers = "~=4.3.1"
django-crispy-forms = "~=2.1"
django-environ = "~=0.11.2"
django-extensions = "~=3.2.3"
django-filter = "~=23.5"
django-formtools = "~=2.5.1"
django-fsm = "~=2.8.1"
django-hosts = "~=6.0"
django-invitations = "~=2.1.0"
django-model-utils = "~=4.3.1"
django-redis = "~=5.4.0"
django-rest-swagger = "~=2.2.0"
django-storages = { extras = ["boto3"], version = "~=1.14.2" }
django-tables2 = "~=2.7.0"
django-waffle = "^4.1.0"
djangorestframework = "~=3.14.0"
djangorestframework-gis = "~=1.0"
fiona = "~=1.9.5"
flower = "~=2.0.1"
freezegun = "~=1.4.0"
geopandas = "~=0.14.2"
gunicorn = "~=21.2.0"
ipython = "~=8.19.0"
isoduration = "~=20.11.0"
lxml = "^5.0.0"
notifications-python-client = "~=9.0.0"
openpyxl = "^3.1.2"
pandas = "^2.1.4"
Pillow = "^10.2.0"
psycopg2-binary = "~=2.9.9"
pydantic = "~=2.5.3"
pyproj = "~=3.6.1"
pytz = "~=2023.3.post1"
redis = "~=5.0.1"
shapely = "~=2.0.2"
stories = "~=5.1.0"
tenacity = "~=8.2.3"
whitenoise = "~=6.6.0"
setuptools="~=69.0.3"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
coverage = "~=7.4.0"
ddt = "~=1.7.1"
django-debug-toolbar = "~=4.2.0"
django-querycount = "^0.8.3"
djhtml = "^3.0.6"
factory-boy = "~=3.3.0"
flake8 = "~=7.0.0"
ipdb = "~=0.13.13"
isort = "~=5.13.2"
mocket = "~=3.12.0"
nose = "~=1.3.7"
pre-commit = "~=3.6.0"
pytest = "~=7.4.4"
pytest-cov = "~=4.1.0"
pytest-deadfixtures = "^2.2.1"
pytest-django = "~=4.7.0"
pytest-factoryboy = "~=2.6.0"
pytest-mock = "~=3.12.0"
pytest-sugar = "~=0.9.7"
pytest-xdist = "~=3.5.0"
pyyaml = "~=6.0.1"
requests-mock = "~=1.11.0"
werkzeug = "~=3.0.1"
debugpy = "1.8.0"
hupper = "^1.12"
docutils = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
