;;
;; crispy-forms-govuk package
;;
[metadata]
name = crispy-forms-govuk
version = 0.1
description = Django application to add 'django-crispy-forms' layout objects for 'GovUK Design System'
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Greg Brown
author_email = greg.brown@itoworld.com
url = https://gitlab01.itoworld.internal/transit-hub/bodp-django
license = None
keywords = Django, django-crispy-forms, govuk
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    # Framework :: Django :: 1.8
    # Framework :: Django :: 1.9
    # Framework :: Django :: 1.10
    # Framework :: Django :: 1.11
    # Framework :: Django :: 2.0
    # Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    # License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    #Programming Language :: Python :: 2
    #Programming Language :: Python :: 2.7
    #Programming Language :: Python :: 3
    #Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=1.8,<3
    django-crispy-forms>=1.6.1
packages = find:
zip_safe = True

[options.extras_require]
dev =
    black
    bs4
    django-debug-toolbar>=1.9,<1.10
    docformatter
    flake8
    lxml
    mypy
    pytest
    pytest-cov
    pytest-django
    pytest-sugar
    sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    six


[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    docs,
    venv,
    node_modules,
    __pycache__,
    */migrations/*

[mypy]
python_version = 3.6
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
envlist = py{27}-django{18,19},py35-django{18,19,110,111,200,210,220}
minversion = 3.4.0

[testenv]
# Get the right django version following the current env
deps =
    django18: Django>=1.8,<1.9
    django19: Django>=1.9,<1.10
    django110: Django>=1.10,<1.11
    django111: Django>=1.11,<1.12
    django200: Django>=2.0,<2.1
    django210: Django>=2.1,<2.2
    django220: Django>=2.2,<2.3

# setenv =
#     PYTHONPATH = {toxinidir}:{env:PYTHONPATH:}

commands =
    pip install -e .[dev]
    pytest -vv tests
