;;
;; bods-frontend package
;;
[metadata]
name = bods-frontend
version = 0.1
description = Django application to integrate asset pipeline into main Django project
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Greg Brown
author_email = greg.brown@itoworld.com
url = https://gitlab01.itoworld.internal/transit-hub/bodp-django
license = None
keywords = Django, gulp, npm, govuk
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    # License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    #Programming Language :: Python :: 2
    #Programming Language :: Python :: 2.7
    #Programming Language :: Python :: 3
    #Programming Language :: Python :: 3.5
;    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=2.2
packages = find:
zip_safe = True


[options.packages.find]
where = .
exclude=
    docs
    tests

[wheel]
universal = 1
